--- a/newcommand.tex
+++ b/newcommand.tex
@@ -10,6 +10,7 @@
 \renewcommand\S{{\cal S}}
 \newcommand\R{{\cal R}}
 \newcommand\I{{\cal I}}
+\renewcommand\O{{\cal O}}
 \newcommand\X{{\cal X}}
 \newcommand\C{{\cal C}}
 \newcommand\D{{\cal D}}
