--- a/usepackage.tex
+++ b/usepackage.tex
@@ -15,8 +15,10 @@
 \usepackage{array}
 \usepackage{xargs}
 \usepackage{multirow}
+\usepackage{setspace}
 \usepackage{tabularx}
 \usepackage{caption}
+\usepackage{float}
 \usepackage[small,compact]{titlesec} 
 \usepackage{makeidx}
 \usepackage{minitoc} 
