--- a/main_file.bib
+++ b/main_file.bib
@@ -208,6 +208,36 @@ abstract = "In deterministic sequencing and scheduling problems, jobs are to be 
   YEAR = {1994}
 }
 
+@Inbook{DP,
+author="Derrien, Alban
+and Petit, Thierry",
+title="A New Characterization of Relevant Intervals for Energetic Reasoning",
+bookTitle="Principles and Practice of Constraint Programming: 20th International Conference, CP 2014, Lyon, France, September 8-12, 2014. Proceedings",
+year="2014",
+publisher="Springer International Publishing",
+address="Cham",
+pages="289--297",
+isbn="978-3-319-10428-7",
+doi="10.1007/978-3-319-10428-7_22",
+url="http://dx.doi.org/10.1007/978-3-319-10428-7_22"
+}
+
+@phdthesis{Alb,
+  TITLE = {{Cumulative scheduling in constraint programming : energetic characterization of reasoning and robust solutions}},
+  AUTHOR = {Derrien, Alban},
+  URL = {https://tel.archives-ouvertes.fr/tel-01242789},
+  NUMBER = {2015EMNA0230},
+  SCHOOL = {{Ecole des Mines de Nantes}},
+  YEAR = {2015},
+  MONTH = Nov,
+  KEYWORDS = {Robustess ; Scheduling ; Constraint Programming ; Cumulative ; Combinatorial Optimisation ; Programmation par Contraintes ; Cumulatif ; Ordonnancement ; Robustesse ; Optimisation Combinatoire},
+  TYPE = {Theses},
+  PDF = {https://tel.archives-ouvertes.fr/tel-01242789/file/Derrien_A_11_2015.pdf},
+  HAL_ID = {tel-01242789},
+  HAL_VERSION = {v1},
+}
+
+
 @article{Nattaf_ORSpectrum,
   TITLE = {{Energetic reasoning and mixed-integer linear programming for scheduling with a continuous resource and linear efficiency functions}},
   AUTHOR = {Nattaf, Margaux and Artigues, Christian and Lopez, Pierre and Rivreau, David},
